# RM

./: README.md
1/: CMakeLists.txt  main.cpp
1/bulid/: CMakeCache.txt  Makefile  MyExecutable  cmake_install.cmake
1/include/: stu.h
1/src/: stu.cpp
2/: main.cpp
3/: main  main.cpp
4/: CMakeLists.txt  main.cpp
4/include/: stu.h
4/src/: stu.cpp
